app/assets/stylesheets/products.scss
@import 'breakpoint';

.products {
  background-color: #F6F5F3;
  max-width: 100vw; 
  height: 100vh;

  h2 {
    font-family: 'Roboto Slab', serrif;
    text-align: center;
    font-size: 3rem;
  }

  .divider {
    margin: auto;
    max-height: 30rem;
    text-align: center;
    display: block;
    padding-top: 6rem;
    
    @include breakpoint(medium){
     padding-top: 13rem; 
    }
  }

  .food {
    text-align: right;
  }

  .header-icon {
    margin-bottom: 1rem;
    max-height: 4rem;
    max-width: 4rem;

    &.drink {
      padding-top: 1.8rem; 
    }
  }

  .drink {
    .product-tile {
      padding: 15px;
      height: 10rem;
      text-align: left;

      @include breakpoint(small){
        min-height: 13rem; 
      }
      
      @include breakpoint(medium){
        min-height: 13rem; 
      }
      
      h3 {
        font-family: 'Pathway Gothic One', cursive;
        font-size: 2rem;
        text-transform: uppercase;
        margin: 0;

        @include breakpoint(medium){
          font-size: 1.5rem;
        }
      }

      .selected {
        color: #B0906C;  
      }

      p {
        font-size: 1.1rem;
        font-family: 'Roboto Slab';
        padding: 0;
        letter-spacing: .6px;
      }
    }
  }
  
  .food{
    .product-tile {
      padding: 15px;
      height: 10rem;
      text-align: right;
      
      @include breakpoint(small){
        min-height: 13rem; 
      }
      
      @include breakpoint(medium){
        min-height: 13rem; 
      }

      h3 {
        font-family: 'Pathway Gothic One', cursive;
        font-size: 2rem;
        text-transform: uppercase;
        margin: 0;

        @include breakpoint(medium){
          font-size: 1.5rem;
        }
      }

      .selected {
        color: #B0906C;  
      }

      p {
        font-size: 1.1rem;
        font-family: 'Roboto Slab';
        letter-spacing: .6px;
      }
    }
  }
}

